// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots P API 1`] = `
.c1 {
  margin: 0;
  font-size: 1rem;
}

.c2 > *:nth-child(2) .c0 {
  margin-top: 5px;
}

.c3 > .c0 {
  margin-top: 5px;
}

.c4 > .c0 {
  margin-top: 5px;
}

<P>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": false,
          "lastClassName": "c1",
          "rules": Array [
            "
  margin: 0;
  font-size: ",
            [Function],
            ";

  ",
            [Function],
            ";
",
          ],
        },
        "displayName": "P",
        "propTypes": Object {
          "color": [Function],
        },
        "render": [Function],
        "styledComponentId": "c0",
        "target": "p",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <p
      className="c0 c1"
    >
      Nisi eu eiusmod cupidatat aute laboris commodo excepteur esse dolore incididunt incididunt aliquip pariatur est minim officia sit. Nulla pariatur duis duis quis commodo cupidatat voluptate enim culpa elit adipisicing do cupidatat sint anim. Cillum elit magna occaecat proident sit cupidatat ad quis sunt id culpa culpa. Ad duis nulla in incididunt amet consequat officia ad voluptate voluptate. Pariatur eiusmod ullamco cupidatat non magna officia aute magna deserunt qui aute dolor eu. Qui amet non ex cillum sunt ad velit consequat ipsum velit.
    </p>
  </StyledComponent>
</P>
`;

exports[`Storyshots P Nested children with div 1`] = `
.c1 {
  margin: 0;
  font-size: 1rem;
}

.c2 > *:nth-child(2) .c0 {
  margin-top: 5px;
}

.c3 > .c0 {
  margin-top: 5px;
}

.c4 > .c0 {
  margin-top: 5px;
}

<P
  as="div"
>
  <StyledComponent
    as="div"
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": false,
          "lastClassName": "c1",
          "rules": Array [
            "
  margin: 0;
  font-size: ",
            [Function],
            ";

  ",
            [Function],
            ";
",
          ],
        },
        "displayName": "P",
        "propTypes": Object {
          "color": [Function],
        },
        "render": [Function],
        "styledComponentId": "c0",
        "target": "p",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0 c1"
    >
      <div>
        <span>
          Qui amet non ex cillum sunt ad velit consequat ipsum velit.
        </span>
      </div>
    </div>
  </StyledComponent>
</P>
`;

exports[`Storyshots P With color props 1`] = `
.c6 {
  margin: 0;
  font-size: 1rem;
  color: #00A1DE;
}

.c8 {
  margin: 0;
  font-size: 1rem;
  color: #F5364E;
}

.c3 {
  margin: 0;
  font-size: 1rem;
  color: #D1D2D3;
}

.c1 {
  margin: 0;
  font-size: 1rem;
  color: #353630;
}

.c2 {
  margin: 0;
  font-size: 1rem;
  color: #999A94;
}

.c4 {
  margin: 0;
  font-size: 1rem;
  color: #FAFAFA;
}

.c5 {
  margin: 0;
  font-size: 1rem;
  color: #FFFFFF;
}

.c7 {
  margin: 0;
  font-size: 1rem;
  color: #69BE28;
}

.c9 {
  margin: 0;
  font-size: 1rem;
  color: #F39A1E;
}

.c10 > *:nth-child(2) .c0 {
  margin-top: 5px;
}

.c11 > .c0 {
  margin-top: 5px;
}

.c12 > .c0 {
  margin-top: 5px;
}

<div>
  <P
    color="black"
    key="black"
  >
    <StyledComponent
      color="black"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": false,
            "lastClassName": "c9",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <p
        className="c0 c1"
        color="black"
      >
        Paragraph 
        black
      </p>
    </StyledComponent>
  </P>
  <P
    color="grayDark"
    key="grayDark"
  >
    <StyledComponent
      color="grayDark"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": false,
            "lastClassName": "c9",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <p
        className="c0 c2"
        color="grayDark"
      >
        Paragraph 
        grayDark
      </p>
    </StyledComponent>
  </P>
  <P
    color="grayBase"
    key="grayBase"
  >
    <StyledComponent
      color="grayBase"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": false,
            "lastClassName": "c9",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <p
        className="c0 c3"
        color="grayBase"
      >
        Paragraph 
        grayBase
      </p>
    </StyledComponent>
  </P>
  <P
    color="grayLight"
    key="grayLight"
  >
    <StyledComponent
      color="grayLight"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": false,
            "lastClassName": "c9",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <p
        className="c0 c4"
        color="grayLight"
      >
        Paragraph 
        grayLight
      </p>
    </StyledComponent>
  </P>
  <P
    color="white"
    key="white"
  >
    <StyledComponent
      color="white"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": false,
            "lastClassName": "c9",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <p
        className="c0 c5"
        color="white"
      >
        Paragraph 
        white
      </p>
    </StyledComponent>
  </P>
  <P
    color="default"
    key="default"
  >
    <StyledComponent
      color="default"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": false,
            "lastClassName": "c9",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <p
        className="c0 c4"
        color="default"
      >
        Paragraph 
        default
      </p>
    </StyledComponent>
  </P>
  <P
    color="primary"
    key="primary"
  >
    <StyledComponent
      color="primary"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": false,
            "lastClassName": "c9",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <p
        className="c0 c6"
        color="primary"
      >
        Paragraph 
        primary
      </p>
    </StyledComponent>
  </P>
  <P
    color="success"
    key="success"
  >
    <StyledComponent
      color="success"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": false,
            "lastClassName": "c9",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <p
        className="c0 c7"
        color="success"
      >
        Paragraph 
        success
      </p>
    </StyledComponent>
  </P>
  <P
    color="error"
    key="error"
  >
    <StyledComponent
      color="error"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": false,
            "lastClassName": "c9",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <p
        className="c0 c8"
        color="error"
      >
        Paragraph 
        error
      </p>
    </StyledComponent>
  </P>
  <P
    color="warning"
    key="warning"
  >
    <StyledComponent
      color="warning"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": false,
            "lastClassName": "c9",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <p
        className="c0 c9"
        color="warning"
      >
        Paragraph 
        warning
      </p>
    </StyledComponent>
  </P>
</div>
`;
